Added Onigiri hypertext

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <h1>Odin Recipes</h1>
     <a href="recipes/Tomato-Pasta.html">Tomato Pasta</a>
-    
-    <h2>Description</h2>
+    <br>
+    <a href="recipes/Onigiri.html">Onigiri</a>
 
 </body>
 </html>
