Added Mini Pancakes to Recipes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="recipes/Tomato-Pasta.html">Tomato Pasta</a>
     <br>
     <a href="recipes/Onigiri.html">Onigiri</a>
-
+    <br>
+    <a href="mini_pancakes.html>">Mini Pancakes</a>
 </body>
 </html>
